security: harden public repo hygiene